# RM-Hero-lob

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  agent.md  cpp_class_interface_spec.md  cpp_offline_architecture_plan.md  progress_tracker.md  trajectory_overlay_plan.md
core/include/: background_remover.hpp  capture.hpp  compression.hpp  identifier.hpp  identifier_geometry.hpp  image_registrator.hpp  image_registrator_orb.hpp  image_synthesis.hpp  pipeline.hpp  reference_frame_selector.hpp  tracker.hpp  tracker_processor.hpp  tracker_processor_fast.hpp  types.hpp
core/src/: background_remover.cpp  capture.cpp  identifier.cpp  identifier_geometry.cpp  image_registrator.cpp  image_registrator_orb.cpp  image_synthesis.cpp  main.cpp  pipeline.cpp  reference_frame_selector.cpp  tracker.cpp  tracker_processor.cpp  tracker_processor_fast.cpp
core/tests/: background_remover_test.cpp  identifier_geometry_test.cpp  identifier_synthetic_test.cpp  pipeline_smoke_test.cpp  tracker_processor_test.cpp
core/tools/: brighten_main.cpp  brightness_dist_main.cpp  brightness_filter_main.cpp  color_picker_main.cpp  compress_main.cpp  frame_extractor_main.cpp  identifier_debug_main.cpp  line_marker_main.cpp  median_background_main.cpp  tile_split_main.cpp  trajectory_debug_main.cpp  video_trimmer_main.cpp
docs/: image_registrator_comparison.md  image_registrator_orb_analysis.md  plan.md  tracker-processor-optimization.md
formal/: CMakeLists.txt
formal/include/image_trans/: long_exposure_composer.h  video_stabilizer.h
formal/src/: long_exposure_composer.cpp  main.cpp  video_stabilizer.cpp
formal/tests/: synthetic_tests.cpp
include/image_trans/: cli_options.hpp  common_types.hpp  config_types.hpp  debug_recorder.hpp  motion_extractor.hpp  offline_processor.hpp  reference_builder.hpp  registration_engine.hpp  replay_source.hpp  trail_compositor.hpp  video_file_source.hpp  window_assembler.hpp
src/background/: reference_builder.cpp
src/cli/: cli_options.cpp  main.cpp
src/compositor/: trail_compositor.cpp
src/debug/: debug_recorder.cpp
src/motion/: motion_extractor.cpp
src/pipeline/: offline_processor.cpp
src/registration/: registration_engine.cpp
src/replay/: video_file_source.cpp
src/windowing/: window_assembler.cpp
tests/: image_trans_tests.cpp
toy/: CMakeLists.txt  README.md
toy/include/image_trans/: simulator.hpp
toy/src/: main.cpp  simulator.cpp  test_main.cpp
